# cranamp

./: .gitignore  Cargo.toml  README.md  build-web.sh  index.html  plan.md
.github/workflows/: ci.yml  pages.yml  release.yml
assets/: winamp.wsz
assets/demo-music/: GENERATION.md  LICENSES.md  README.md
assets/demo-music/prompts/: cranamp-demo-prompts.md
docs/: FLOATING_SURFACES.md  ROADMAP.md
platform/android/: build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
platform/android/app/: build.gradle.kts  proguard-rules.pro
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/java/com/cranamp/app/: CranampActivity.java
platform/android/gradle/wrapper/: README.md
scripts/: convert_demo_music.sh  generate_demo_music.md
src/: android_bridge.rs  audio.rs  fonts.rs  lib.rs  main.rs
src/winamp/: mod.rs  skin.rs  sprites.rs
